--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 
 <h1>Manali</h2>
-<img src="https://dp-bucket1111.s3.ap-south-1.amazonaws.com/dp.jpg" alt="Manali" width="500" height="333">
-<img src="https://dp-bucket1111.s3.ap-south-1.amazonaws.com/dp1.jpg" alt="Manali" width="500" height="333">
-<img src="https://dp-bucket1111.s3.ap-south-1.amazonaws.com/dp2.jpg" alt="Manali" width="500" height="333">
+<img src="d236f195jsvyvt.cloudfront.net/dp.jpg" alt="Manali" width="500" height="333">
+<img src="d236f195jsvyvt.cloudfront.net/dp1.jpg" alt="Manali" width="500" height="333">
+<img src="d236f195jsvyvt.cloudfront.net/dp2.jpg" alt="Manali" width="500" height="333">
 
 </body>
 </html>
