--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 
 <h1>Manali</h2>
-<img src="d236f195jsvyvt.cloudfront.net/dp.jpg" alt="Manali" width="500" height="333">
-<img src="d236f195jsvyvt.cloudfront.net/dp1.jpg" alt="Manali" width="500" height="333">
-<img src="d236f195jsvyvt.cloudfront.net/dp2.jpg" alt="Manali" width="500" height="333">
+<img src="d2u4yb718xdr88.cloudfront.net/c2.jpg" alt="Manali" width="500" height="333">
+<img src="d2u4yb718xdr88.cloudfront.net/c3.jpg" alt="Manali" width="500" height="333">
+<img src="d2u4yb718xdr88.cloudfront.net/c4.jpg" alt="Manali" width="500" height="333">
 
 </body>
 </html>
